Refresh strategy clean up